# Smart-Table

./: .gitignore  README.md  ask_user.c  server.js
BOT/: .gitignore  chart.js  chatId.json  package-lock.json  package.json  server.js
pico2/: CMakeLists.txt  lwipopts.h  pico2_main.c
table/: .gitignore  CMakeLists.txt  ask_user.c  ask_user.h  main.c
